project('libodb', 'cpp', version: '2.4.0')

odb_files = files(
'odb/cache-traits.hxx',
'odb/callback.cxx',
'odb/callback.hxx',
'odb/connection.cxx',
'odb/connection.hxx',
'odb/container-traits.hxx',
'odb/core.hxx',
'odb/database.cxx',
'odb/database.hxx',
'odb/exception.hxx',
'odb/exceptions.cxx',
'odb/exceptions.hxx',
'odb/forward.hxx',
'odb/function-table.hxx',
'odb/lazy-pointer-traits.hxx',
'odb/lazy-ptr-impl.cxx',
'odb/lazy-ptr-impl.hxx',
'odb/lazy-ptr.hxx',
'odb/no-id-object-result.hxx',
'odb/no-op-cache-traits.hxx',
'odb/nullable.hxx',
'odb/object-result.hxx',
'odb/pointer-traits.hxx',
'odb/polymorphic-info.hxx',
'odb/polymorphic-map.hxx',
'odb/polymorphic-object-result.hxx',
'odb/post.hxx',
'odb/pre.hxx',
'odb/prepared-query.cxx',
'odb/prepared-query.hxx',
'odb/query-dynamic.cxx',
'odb/query-dynamic.hxx',
'odb/query.hxx',
'odb/result.cxx',
'odb/result.hxx',
'odb/schema-catalog-impl.hxx',
'odb/schema-catalog.cxx',
'odb/schema-catalog.hxx',
'odb/schema-version.hxx',
'odb/section.cxx',
'odb/section.hxx',
'odb/session.cxx',
'odb/session.hxx',
'odb/simple-object-result.hxx',
'odb/statement-processing-common.hxx',
'odb/statement-processing.cxx',
'odb/statement.cxx',
'odb/statement.hxx',
'odb/std-array-traits.hxx',
'odb/std-deque-traits.hxx',
'odb/std-forward-list-traits.hxx',
'odb/std-list-traits.hxx',
'odb/std-map-traits.hxx',
'odb/std-set-traits.hxx',
'odb/std-unordered-map-traits.hxx',
'odb/std-unordered-set-traits.hxx',
'odb/std-vector-traits.hxx',
'odb/tracer.cxx',
'odb/tracer.hxx',
'odb/traits.hxx',
'odb/transaction.cxx',
'odb/transaction.hxx',
'odb/vector-impl.cxx',
'odb/vector-impl.hxx',
'odb/vector-traits.hxx',
'odb/vector.hxx',
'odb/version.hxx',
'odb/view-image.hxx',
'odb/view-result.hxx',
'odb/wrapper-traits.hxx',
)
args = ''
if get_option('default_library') == 'shared'
    args = '-DLIBODB_DYNAMIC_LIB'
elif get_option('default_library') == 'static'
    args = '-DLIBODB_STATIC_LIB'
endif
odb_lib = library('odb', odb_files,
    cpp_args: args,
    install: true)

libodb_dep = declare_dependency(
    link_with: odb_lib,
    include_directories: include_directories('.')
)